cloudformation/public-aws/security-groups01.yaml
Description: >
    This template contains the security groups required by our entire stack.
    We create them in a seperate nested template, so they can be referenced
    by all of the other nested templates.

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    VPC:
        Type: AWS::EC2::VPC::Id
        Description: Choose which VPC the security groups should be deployed to

Resources:
    SecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties: 
            VpcId: !Ref VPC
            GroupDescription: Security group for SDP environment
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 8080
                  ToPort: 8080
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 9000
                  ToPort: 9000
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 50000
                  ToPort: 50000
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 5432
                  ToPort: 5432
            SecurityGroupEgress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 50000
                  ToPort: 50000
            
  
    OutboundRule:
        Type: AWS::EC2::SecurityGroupEgress
        Properties:
            DestinationSecurityGroupId: !GetAtt SecurityGroup.GroupId
            GroupId: !GetAtt SecurityGroup.GroupId
            IpProtocol: tcp
            FromPort: 0
            ToPort: 65535

Outputs:
    SecurityGroups:
        Description: A list of the security groups.
        Value: !Join [ ",", [ !Ref SecurityGroup ]]
